<resources>
    <string name="app_name">MuseumClient</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_length">Password must contain 4-16 characters</string>
    <string name="error_different_passwords">Passwords are different</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="ui_login_tab_text">Sign in</string>
    <string name="scanner_tab_text">Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="register_link">Touch here, to create a new account</string>
    <string name="message_account_created">Your account has been created. Please visit given email address to activate it.</string>
    <string name="error_email_already_used">This email is already in use</string>
    <string name="error_server_connection">Cannot connect with a server. Please try again later.</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="error_unknown">Unknown error, try again</string>
    <string name="error_bad_credentials">Invalid email or password</string>
    <string name="ui_logged_as">You\'re logged in as</string>
    <string name="ui_role_employee">Employee</string>
    <string name="ui_role_customer">Customer</string>
    <string name="action_sign_out">Sign out</string>
    <string name="ui_menu_buyticket">Buy a ticket</string>
    <string name="ui_menu_mytickets">My tickets</string>
    <string name="error_inactive_account">Inactive account. Activate your account</string>
    <string name="ui_text_yes">Yes</string>
    <string name="ui_text_no">No</string>
    <string name="prompt_exit">Do you want to exit?</string>
    <string name="prompt_signout">Do you want to sign out?</string>
    <string name="ui_children_nr">Nr of children</string>
    <string name="ui_adults_nr">Nr of adults</string>
    <string name="ui_select_date">Select date</string>
    <string name="ui_button_buy_ticket">Buy ticket</string>
    <string name="title_activity_artwork">ArtworkActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="ui_text_card">Credit card</string>
    <string name="ui_text_transfer">Bank transfer</string>
    <string name="ui_text_payment_method">Payment method</string>
    <string name="ui_text_paypal">PayPal</string>
    <string name="ui_button_orderandpay">Order and pay</string>
    <string name="ui_button_orderandpaylater">Order and pay later</string>
    <string name="error_invalid_date">Invalid date</string>
    <string name="error_invalid_day">Day cannot be Sunday nor Saturday</string>
    <string name="error_person_amount">There must be at least one adult</string>
    <string name="error_sign_in_again">Please sign in again</string>
    <string name="error_try_again">Please try again</string>
    <string name="ui_dialog_ticket_ordered">Ticket has been ordered. Go to My Tickets to make a payment</string>
    <string name="ui_ticketlist_date">Date</string>
    <string name="ui_ticketlist_cost">Cost</string>
    <string name="ticket_status_unpaid">Unpaid</string>
    <string name="ui_ticketlist_status">Status</string>
    <string name="ui_ticketlist_nr">Nr</string>
    <string name="ui_ticket_order_date">Order date</string>
    <string name="ui_ticket_valid_date">Valid at</string>
    <string name="ui_button_pay">Pay</string>
    <string name="ui_button_get_qr">Get QR</string>
    <string name="ui_menu_customerprofile">My profile</string>
    <string name="emp_menu_manage_artworks">Manage artworks</string>
    <string name="emp_menu_manage_artists">Manage artists</string>
    <string name="ui_artwork_name">Name</string>
    <string name="ui_artwork_author">Author</string>
    <string name="ui_artwork_creationyear">Creation year</string>
    <string name="ui_artist_birthdate">Birth date</string>
    <string name="ui_register_date">Account created</string>
    <string name="ui_days_from_register">Days from registration</string>
    <string name="ui_ordered_tickets">Ordered tickets</string>
    <string name="prompt_current_password">Current password</string>
    <string name="prompt_new_password">New password</string>
    <string name="ui_change_data">Change data</string>
    <string name="ui_change_password">Change password</string>
    <string name="ui_delete_account">Delete account</string>
    <string name="ui_artist_deathdate">Death date</string>
    <string name="ui_description">Description</string>
    <string name="ui_delete_artits">Delete artist</string>
    <string name="ui_add_artist">Add artist</string>
    <string name="ui_change_image">Change image</string>
    <string name="ui_add_artwork">Add artwork</string>
    <string name="ui_delete_artwork">Delete artwork</string>
    <string name="ui_add_operation">Add operation</string>
    <string name="ui_operations_list">Operations list</string>
</resources>